# label

./: CMakeLists.txt  CMakeLists.txt.user.5665fdb  CMakeLists.txt.user.5ead0af  README.md  Traditional.cpp  Traditional.h  cmake-config.txt  config.yaml  configure.cpp  configure.hpp  configuredialog.cpp  configuredialog.h  configuredialog.ui  drawonpic.cpp  drawonpic.h  labeldialog.cpp  labeldialog.h  labeldialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  model.cpp  model.hpp  resource.qrc  yolov5_smart.cpp  yolox.cpp  yolox.h  yolox_smart.cpp
